--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bitcoin Mining for Energy Efficiency</title>
     <style>
+        * {
+            all: unset;
+            all: revert;
+        }
         body {
-            font-family: Trebuchet MS, Arial, sans-serif;
+            font-family: "Trebuchet MS", Arial, sans-serif;
             line-height: 1.8;
             max-width: 900px;
             margin: 40px auto;
