--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             all: revert;
         }
         body {
-            font-family: "Trebuchet MS", Arial, sans-serif;
+            font-family: Arial, sans-serif;
             line-height: 1.8;
             max-width: 900px;
             margin: 40px auto;
